Added Bootstrap support

--- a/src/main/java/com/SOR2/HomePage.html
+++ b/src/main/java/com/SOR2/HomePage.html
@@ -16,23 +16,12 @@
 		<div id="bd">
 			<h2>Congratulations!</h2>
 			<p>
-				Your quick start works! This project is especially useful to
-                start developing your Wicket application or to create a test
-                case for a bug report.
-			</p>
-			<h3>Get started</h3>
 			<p>
-				You can even <a href="https://localhost:8443">switch to HTTPS</a>!
-			</p> 
-			<p>
-				From here you can start hacking away at your application and
-                wow your clients:
-			</p>
-			<ul>
-				<li>work through <a href="http://wicket.apache.org/learn/examples" target="_blank" title="Hello world and friends">some examples</a></li>
-				<li>read <a href="http://wicket.apache.org/learn/books" target="_blank" title="Books about Wicket in English, German and Japanese">some books</a></li>
-				<li>find <a href="http://wicket.apache.org/learn/projects" target="_blank" title="Additional projects, components and libraries">additional components, projects and libraries</a></li>
-			</ul>
+				Webapp links:<br/>
+				<ul>
+					<li>login: <div wicket:id="login"> here </div></li>
+				</ul>
+			
 			<h3>Get help</h3>
 			<p>
 				We are here to help!
