--- a/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
@@ -5,6 +5,13 @@
     <title></title>
 </head>
 <body>
-
+<table>
+  <tr>
+    <th>ISO 3166-1</th><th>Name</th><th>Long name</th><th>Capital</th><th>Population</th>
+  </tr>
+  <tr wicket:id="rows">
+    <td wicket:id="dataRow"></td>
+  </tr>
+</table>
 </body>
 </html>
