Test data toegevoegd en de paging gefixt

--- a/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
@@ -5,9 +5,11 @@
     <title></title>
 </head>
 <body>
+
+<span wicket:id="pagingNavigator"></span>
 <table>
   <tr>
-    <th>ISO 3166-1</th><th>Name</th><th>Long name</th><th>Capital</th><th>Population</th>
+    <th>message_ID</th><th>sender</th><th>subject</th><th>message</th>
   </tr>
   <tr wicket:id="rows">
     <td wicket:id="dataRow"></td>
