--- a/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
@@ -9,7 +9,7 @@
 <span wicket:id="pagingNavigator"></span>
 <table>
   <tr>
-    <th>message_ID</th><th>sender</th><th>subject</th><th>message</th>
+    <th>message_ID</th><th>sender</th><th>subject</th><th>message</th><th>receiver</th>
   </tr>
   <tr wicket:id="rows">
     <td wicket:id="dataRow"></td>
