Commit zodat ik eindelijk een pull kan doen(bedankt intellij)

--- a/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="nl" xmlns:wicket="http://www.w3.org/1999/xhtml">
+<head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Beheerscherm</title>
+    <wicket:link>
+    <link rel="stylesheet" type="text/css" href="adminLayout.css">
+    </wicket:link>
 </head>
 <body>
-
+<div class="container-fluid">
+    <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-12 messages">
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+    </ul>
+    </div>
+        </div>
+</div>
 </body>
 </html>
