--- a/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="nl" xmlns:wicket="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
@@ -8,18 +7,13 @@
     </wicket:link>
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-12 messages">
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-    </ul>
-    </div>
-        </div>
-</div>
+    <table>
+        <tr>
+            <th>message id</th><th>sender</th><th>subject</th><th>message</th><th>receiver</th>
+        </tr>
+        <tr wicket:id="rows">
+            <td wicket:id="dataRow"></td>
+        </tr>
+    </table>
 </body>
 </html>
