--- a/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
@@ -7,6 +7,7 @@
     </wicket:link>
 </head>
 <body>
+	<span wicket:id="pagingNavigator"></span>
     <table>
         <tr>
             <th>message id</th><th>sender</th><th>subject</th><th>message</th><th>receiver</th>
