Date toegevoegd aan html tabel

--- a/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
@@ -10,7 +10,7 @@
 	<span wicket:id="pagingNavigator"></span>
     <table>
         <tr>
-            <th>message id</th><th>sender</th><th>subject</th><th>message</th><th>receiver</th>
+            <th>message id</th><th>sender</th><th>subject</th><th>message</th><th>receiver</th><th>date</th>
         </tr>
             <tr wicket:id="rows">
                 <td wicket:id="dataRow"></td>
