start gemaakt met invallid table en button toegevoegd

--- a/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
@@ -28,6 +28,9 @@
 		        </li>
 		        <li>
 		        	<button type="button" class="btn btn-default navbar-btn" wicket:id="logout">Logout</button>
+		        </li>	
+		        <li>
+		        	<button type="button" class="btn btn-default navbar-btn" wicket:id="Invalid Messages">Invalid Messages</button>
 		        </li>		
 		      </ul>
 		    </div><!--/.nav-collapse -->
