--- a/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/beheerscherm.html
@@ -83,11 +83,9 @@
 				<div class="col-lg-12 messageTable">
 					<div class="row">
 						<table>
-							<tr>
-								<th>message id</th><th>sender</th><th>subject</th><th>message status</th><th>receiver</th><th>date</th>
-							</tr>
-							<tr wicket:id="rows">
-								<td wicket:id="dataRow"></td>
+							<th>message id</th><th>sender</th><th>subject</th><th>message status</th><th>receiver</th><th>date</th>
+							<tr wicket:id="rows" class="messageRow">
+								<td wicket:id="dataRow" class="messages"></td>
 							<tr class="subRow">
 								<td colspan="6">
 									<p>test status give some input here</p>
