--- a/src/main/java/com/SOR2/ADMIN_PAGE/BeheerschermUser.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/BeheerschermUser.html
@@ -1,44 +1,51 @@
 <!-- HTML pagina van het beheerscherm -->
 <html lang="nl" xmlns:wicket="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Beheerscherm</title>
-	<wicket:head>
-    	<wicket:link>
-    		<link rel="stylesheet" type="text/css" href="adminLayout.css">
-    	</wicket:link>
-		<wicket:link>
-			<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-		</wicket:link>
-	</wicket:head>
+<meta charset="UTF-8">
+<title>Beheerscherm</title>
+<wicket:head>
+	<wicket:link>
+		<link rel="stylesheet" type="text/css" href="adminLayout.css">
+	</wicket:link>
+	<wicket:link>
+		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+	</wicket:link>
+</wicket:head>
 
 </head>
 <body>
 
-<!-- this content will be added the the parent "beheerscherm_sjabloon.html" -->
-<wicket:extend>
-	<script type="text/javascript">
-		$(function(){
-			$("td[colspan=6]").find("p").hide();
-			$("table").click(function(event){
-				event.stopPropagation();
-				var $target = $(event.target);
-				if($target.closest("td").attr("colspan")> 1 && $target.hasClass(".subRow")){
-					$target.slideUp();
-				}
-				else if( !$target.hasClass(".subRow")){
-					$target.closest("tr").next().find("p").slideToggle();
-				}
+	<!-- this content will be added the the parent "beheerscherm_sjabloon.html" -->
+	<wicket:extend>
+		<script type="text/javascript">
+			$(function() {
+				$("td[colspan=6]").find("p").hide();
+				$("table").click(
+						function(event) {
+							event.stopPropagation();
+							var $target = $(event.target);
+							if ($target.closest("td").attr("colspan") > 1
+									&& $target.hasClass(".subRow")) {
+								$target.slideUp();
+							} else if (!$target.hasClass(".subRow")) {
+								$target.closest("tr").next().find("p")
+										.slideToggle();
+							}
+						});
 			});
-		});
-	</script>
-	<div class="container-fluid">
-		<div class="row">
+		</script>
+		<div class="container-fluid">
+			<div class="row">
 				<div class="col-lg-12 messageTable">
 					<div class="row">
 						<div wicket:id=dataViewContainer>
 							<table>
-								<th>message id</th><th>sender</th><th>subject</th><th>message status</th><th>receiver</th><th>date</th>
+								<th>message id</th>
+								<th>sender</th>
+								<th>subject</th>
+								<th>message status</th>
+								<th>receiver</th>
+								<th>date</th>
 								<tr wicket:id="rows" class="messageRow">
 									<td wicket:id="dataRow" class="messages"></td>
 								<tr class="subRow">
@@ -47,14 +54,49 @@
 									</td>
 								</tr>
 								</tr>
-							</table>							
+							</table>
 							<span wicket:id="pagingNavigator"></span>
 						</div>
 					</div>
 				</div>
 			</div>
+
+			<div class="row">
+				<div class="col-lg-8" id="notificationTable">
+					<table>
+						<th>veldnaam</th>
+						<th>Type</th>
+						<th>Overige voorwaarden</th>
+						<tr class="messageRow">
+							<td>Receiver</td>
+							<td>String</td>
+							<td>Moet geregistreerd zijn</td>
+						</tr>
+						<tr class="messageRow">
+							<td>Sender</td>
+							<td>String</td>
+							<td>Moet geregistreerd zijn</td>
+						</tr>
+						<tr class="messageRow">
+							<td>Subject</td>
+							<td>String</td>
+							<td></td>
+						</tr>
+						<tr class="messageRow">
+							<td>Message</td>
+							<td>String</td>
+							<td>max 1.000 karakters</td>
+						</tr>
+						<tr class="messageRow">
+							<td>transactieID</td>
+							<td>Numeriek</td>
+							<td></td>
+						</tr>
+					</table>
+				</div>
+			</div>
 		</div>
-</wicket:extend>		
-		
+	</wicket:extend>
+
 </body>
 </html>
