De status wordt nu correct ingeladen

--- a/src/main/java/com/SOR2/ADMIN_PAGE/BeheerschermSjabloon.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/BeheerschermSjabloon.html
@@ -38,6 +38,9 @@
 	        	<button type="button" class="btn btn-default navbar-btn" wicket:id="logout">Logout</button>
 	        </li>	
 	        <li>
+	        	<button type="button" class="btn btn-default navbar-btn" wicket:id="Valid Messages">Valid Messages</button>
+	        </li>	
+	        <li>
 	        	<button type="button" class="btn btn-default navbar-btn" wicket:id="Invalid Messages">Invalid Messages</button>
 	        </li>		
 	      </ul>
