kleine weiziging aan opmaak

--- a/src/main/java/com/SOR2/ADMIN_PAGE/BeheerschermUser.html
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/BeheerschermUser.html
@@ -47,14 +47,14 @@
 								<th>message id</th>
 								<th>sender</th>
 								<th>subject</th>
-								<th>message status</th>
+								<th>Validation status</th>
 								<th>receiver</th>
 								<th>date</th>
 								<tr wicket:id="rows" class="messageRow">
 									<td wicket:id="dataRow" class="messages"></td>
 								<tr class="subRow">
 									<td colspan="6">
-										<p>test status give some input here</p>
+										<p wicket:id="slidingRow">test status give some input here</p>
 									</td>
 								</tr>
 								</tr>
